[package]
name = "proxy-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
tract-onnx = "0.16.5"
wasabi = { path = "..", default-features = false }
envoy-sdk = "0.2.0-alpha.1"
jpeg-decoder = { version = "0.2.1", default-features = false, features = ["platform_independent"] }
