[package]
name = "proxy-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
tract-onnx = "0.16.5"
wasabi = { path = "..", default-features = false }
envoy-sdk = "0.2.0-alpha.1"
jpeg-decoder = { git = "https://github.com/image-rs/jpeg-decoder", branch = "master", default-features = false }
